css/desktop.css
/* ... */
.search_block h2{font-size:1.5em;color:#4e4e4e;margin:0px;font-weight:bold;padding:7px 5px 7px 14px;}
.inner_block{border:1px solid #d2d2d2;float:left;padding:14px 22px 20px ;}
.inner_block div{float:left;margin-right:20px;}
.inner_block div label{color:#5e5e5e;font-size:1.3em;padding-bottom:6px;float:left;}
.inner_block div select{font-size:1.2em;color:#5E5E5E;clear:both;width:193px;padding:8px 10px;border:0px none;height:33px;float:left;}
.inner_block div select option{border:1px solid #d2d2d2;border-top:0px;background:#f8f8f8;color:#4e4e4e;font-size:1.2em;padding:8px 10px;}
.header_right .customSelectInner{ font-size: 1em;}
.header_right select option{border:1px solid #d2d2d2;border-top:0px;background:#e7e7e7;color:#4e4e4e;font-size:1em;padding:2px 2px;}
.inner_block div select option:hover, .inner_block div select option:focus{background:#a3a3a3;color:#fff; float: left;}
.inner_block input[type='button']{float:left;margin-right:20px;margin-top:24px;}
.inner_block input[type='button'], .section_right input[type='button'], .tab_content_left form input[type='button'], #wrapper .tab_content_full .tab_content_left .form_submission a.next, #wrapper .tab_content_full .tab_content_left .form_submission a.prev, .section_right .common_right_section a#login, .section_right .common_right_section a#unsubscribe{color:#fff;font-size:1.2em;font-weight:bold;padding:8px 10px;border:1px solid #4c4b4b;
background: -moz-linear-gradient(top, #8b8b8b 0%, #848484 20%, #787878 40%, #737373 50%, #6a6a6a 60%, #585858 80%, #4e4e4e 100%); /* FF3.6+ */
background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#8b8b8b), color-stop(20%,#848484), color-stop(40%,#787878), color-stop(50%,#737373), color-stop(60%,#6a6a6a), color-stop(80%,#585858), color-stop(100%,#4e4e4e)); /* Chrome,Safari4+ */
background: -webkit-linear-gradient(top, #8b8b8b 0%, #848484 20%, #787878 40%, #737373 50%, #6a6a6a 60%, #585858 80%, #4e4e4e 100%); /* Chrome10+,Safari5.1+ */
background: -o-linear-gradient(top, #8b8b8b 0%, #848484 20%, #787878 40%, #737373 50%, #6a6a6a 60%, #585858 80%, #4e4e4e 100%); /* Opera 11.10+ */
background: -ms-linear-gradient(top, #8b8b8b 0%, #848484 20%, #787878 40%, #737373 50%, #6a6a6a 60%, #585858 80%, #4e4e4e 100%); /* IE10+ */
background: linear-gradient(to bottom, #8b8b8b 0%, #848484 20%, #787878 40%, #737373 50%, #6a6a6a 60%, #585858 80%, #4e4e4e 100%); /* W3C */}
.inner_block input[type='submit'], .search_block .submit, .maisons_lists ul li.join-us a, .view_jobs a, .maison_main_content .maison_desc input[type='submit'], .job_alert input[type='submit'], #wrapper .tab_content_full .tab_content_left input.attach, .maisons_lists ul li.join-us a, .our_maison_gallery .maison_main_content .maison_desc a.invite, .inner_block a.view-job, .left_section.contact-lft input[type="submit"] {float:left;margin-right:15px;color:#fff;font-size:1.1em;font-weight:bold;padding:8px 10px;border:1px solid #054670;margin-top:24px;
background: -moz-linear-gradient(top, #255e83 0%, #245d82 20%, #215a7f 40%, #1d577b 50%, #195377 60%, #124b70 80%, #10496d 100%); /* FF3.6+ */
background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#255e83), color-stop(20%,#245d82), color-stop(40%,#215a7f), color-stop(50%,#1d577b), color-stop(60%,#195377), color-stop(80%,#124b70), color-stop(100%,#10496d)); /* Chrome,Safari4+ */
background: -webkit-linear-gradient(top, #255e83 0%, #245d82 20%, #215a7f 40%, #1d577b 50%, #195377 60%, #124b70 80%, #10496d 100%); /* Chrome10+,Safari5.1+ */
background: -o-linear-gradient(top, #255e83 0%, #245d82 20%, #215a7f 40%, #1d577b 50%, #195377 60%, #124b70 80%, #10496d 100%); /* Opera 11.10+ */
background: -ms-linear-gradient(top, #255e83 0%, #245d82 20%, #215a7f 40%, #1d577b 50%, #195377 60%, #124b70 80%, #10496d 100%); /* IE10+ */
background: linear-gradient(to bottom, #255e83 0%, #245d82 20%, #215a7f 40%, #1d577b 50%, #195377 60%, #124b70 80%, #10496d 100%); /* W3C */}
.inner_block a.reset{color:#00436e;margin:0px;margin-top:15px;clear: both;margin-right:15px;font-size:1.2em;font-weight:bold;float:right;}
.inner_block div span.customSelect, .tab_content_left span.customSelect{ background: url("../img/parallax/select.jpg") no-repeat scroll left top transparent;width:193px; padding: 8px; clear:both;float:left;}
.customSelectInner{font-family: 'Lato', "Times New Roman"; font-size: 13px}

.search_sections, .pagination, .pagination ul, .search_list{float:left;}
.inner_block a.view-job{margin: 0px;padding: 5px 10px;}
.section_right .common_right_section a#login, .section_right .common_right_section a#unsubscribe{display: inline-block;font-size: 1.3em;padding: 4px 10px;}
/* Section Left */
.section_left{float:left;width:605px;}
.serach_main_lists{padding-right:30px;border-right:1px solid #D2D2D2;}
.serach_main_lists .search_list:last-child{margin:0px;}
.search_list{border-bottom:1px solid #939393;padding-bottom:20px; margin-bottom: 25px;}
.search_list div{float:left;font-size:1.3em;color:#333;}
.search_list div.img_block{width:24%;}
.search_list div.img_desc{width:45%;}
.search_list div.img_date{width:15%;}
.search_list div.img_details{width:16%;padding-right:0px;}
.search_list div h4{font-size:1em;margin:0px 0px 3px 0px;font-weight: bold;}
.search_list div strong{float:left;}
.search_list div span{font-weight:normal;float:left;clear:both;}
.search_list div h5{font-weight:normal;margin:0px;font-size:1em;}
.search_list div a{color:#00436e;font-weight:bold;}
.pagination{margin-top:10px;}
.pagination ul li{float:left;margin-right:6px;font-size:1.3em;color:#454545;}
.pagination ul li a{color:#00436E;}
.pagination ul li.first-page a, .pagination ul li.last-page a{color:#00436E;}
.pagination ul li.active a{color:#00436e;border-bottom:1px solid #00436e;}
.pagination ul li a:hover{color:#00436e;}
.pagination ul li.previous a, .pagination ul li.next a, .pagination ul li.previous span, .pagination ul li.next span{margin:0px 7px;border:0px;}
/* ... */

